change '## About This Item' to '## About This Object' in all MarkDown files

--- a/_items/2019-10-03-0007.md
+++ b/_items/2019-10-03-0007.md
@@ -14,7 +14,7 @@ categories: [ Nostalgia, Practical ]
 tags: [ Animal, Canine, Mixed Breed, Domesticated, Shelter Dog, Social Psychology, Friendship, Fun, Woof, ]
 ---
 
-## About This Item
+## About This Object
 
 This *object* is much more than just any old *object*. This *object* wags his tail, licks strangers, and goes for walks! That is because this *object* is Malachi the Dog! Malachi is a brown and black two-year-old dog who is assumed to be a Boston terrier/beagle mix. Krista Bozacki adopted Malachi in December of 2017 from a local Bloomington pet shelter. The secondary source, "[Stress Goes to the Dogs](https://www.jstor.org/stable/3976005?Search=yes&resultItemClick=true&searchText=stress&searchText=goes&searchText=to&searchText=the&searchText=dogs&searchUri=%2Faction%2FdoBasicSearch%3FQuery%3Dstress%2Bgoes%2Bto%2Bthe%2Bdogs&ab_segments=0%2Fbasic_SYC-4802%2Ftest1&refreqid=search%3Aba4917c76dfa816ffc4347cb347e9aa1&seq=1#metadata_info_tab_contents)," makes a connection to the *object* through the ties of canine companionship and social psychology. As Malachi is clearly a great companion and surprisingly an even better psychological motivator. Even some of the most knowledgeable dog owners might be surprised to find out that "…the presence of a canine comrade acts as a natural sedative for its human master, lowering blood pressure and other bodily responses to stress…"
 
