--- a/_items/2019-10-03-0008.md
+++ b/_items/2019-10-03-0008.md
@@ -14,7 +14,8 @@ shortdesc: A rare medical book that contains a collection of other medical books
 categories: [ science, rare books, collection, donation, Lily Library, Eli Lily ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
+
 This is a medical book from the Lily Library that contains 130 books of medical importance from the collection of J.K. Lily Jr. Inside the bok, there are descriptions and illistrations of these 130 medical book. The book is currently housed in the Lily Library Stacks and can be viewed by students and faculty by appointment here at Indiana University.[^1] 
 
 The other books listed in this collection contain information on a variety of topics that include: ancient efforts on anatomy, physiology, geology, and important breakthroughs in both medicine and how the world works.
@@ -25,6 +26,7 @@ Josiah Kirby Lily Jr. and his family donated a large selection of medical import
 If you would like to view this extensive collection, which includes writings on blood circulation from 1628, Fracastoro's poem on syphilis from 1530, and books on plastic surgery from 1597, the link can be found [here](https://libraries.indiana.edu/lilly-library/medicine-and-science )
 
 ## From the Contributor
+
 > *I've, since a very young child, been very interested in how the world works and I learned at some point that you can make a living that way. Very rarely do young children get exposed to the thought that they can do something that they really love to do.*
 
 
