--- a/_items/2019-10-03-0009.md
+++ b/_items/2019-10-03-0009.md
@@ -14,7 +14,8 @@ shortdesc: Once pillow sham repurposed as a purse by the contributor of the obje
 categories: [ handmade, craft, homemade, repurposed material, Domestic Engineers ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
+
 This purse was created by Kathy herself from a repurposed pillow sham she found at a Goodwill store. It has a quilted texture, patchwork around the sides, and hand-sewn buttons. This one is not the first that she has made from repurposing the materials she finds. Through these projects that use repurposed material, artist of all skill levels, backgrounds, and artforms have the chance to express their creativity while also lending a hand to helping the enviornment. Numerous studies by the Environmental Protection Agency have stressed the importance of reusing the repurposing materials. [^1] They also give a list of reasons to why one should repurpose their materials instead of throwing them away. Some of the reasons include saving energy, saving money, sustanablitiy, and allowing products to be used to their full extent.[^2] 
 
 Indiana Univeristy also has a handful of books in its collection about creating objects out of repurposed materials. One of those books, "Re-bound," can be found [here](https://iucat.iu.edu/catalog/9094228). If you want to try your hand at making one yourself, Karen McLennan give a step-by-step tutorial here:
