--- a/_items/2019-10-03-0010.md
+++ b/_items/2019-10-03-0010.md
@@ -14,12 +14,14 @@ categories: [ Family Ties, Nostalgia, Community Culture]
 tags: [ home, handmade textiles, Pano, shrydak, textile, Kyrgyzstan ]
 ---
 
-# About This Item
+# About This Object
+
 Home textiles remain largely out of the public’s eye as 'historical items.' This can be attributed to the preservation of textiles in history: they don't survive historical 'wear and tear' as well as large steel buildings and metal coins do (LaRoche 65).
 
 However, they're still an important part of our history. People come together through quilting, embroidering, and knitting circles. People create something that is more than themselves, whether by making big buildings or small handmade baby blankets. Although most material cultures are seen through the items themselves (think about any material item recently made!), textiles' long history and lack of preservation through time makes us look to the contexts in which they were made to understand them. Through looking at how this Pano made it to Bloomington, Indiana, we can begin to understand the importance of handmade textiles and how they're woven into the fabric of our communities.
 
 ## What is Pano?
+
 This item originated in Kyrgyzstan in Central Asia. It's a handmade textile with a gray border and colorful motifs embroidered onto a black background. It looks as if the border encapsulates a piece of cut fabric, as the pattern toward the end of the black background is uneven in places and cut off. Textiles like this Pano can be used as wall hangings, blankets, and floor coverings (<em>Nomadic Felts</em>); however, the Pano's specific use is as a wall hanging according to contributor Tattu.
 
 Pano appear to be made in similar styles as Kyrgyz shyrdak and tush kyiz. Shyrdak and tush kyiz involve a Kyrgyz process of cutting out patterns in felt and sewing them together (<em>Nomadic Felts</em>). Anthropologist Stephanie Bunns, in her field apprenticeship with Kyrgyz women, details the aesthetics and 'borrowing' of motifs in these textile practices. Bunns describes how the motifs work together to make the whole. Regarding symbolism in Panos, Bunn describes how although there are common motifs such as 'ram's horn,' the meaning of these symbols is personal to each women who creates them (A 'Making Point of View': Deep Knowledge from Local Practice, with Special Reference to Felt-makers in Kyrgyzstan). 
@@ -37,6 +39,7 @@ This Pano was brought to Bloomington, Indiana as a physical result of community 
 I met it before I came to the US because I wanted to bring something cultural from my home country to show people here but similar items I used to see in my grandma's house when I was a kid. But now I don't see them anymore because everything is getting very modern and people they're becoming more, I don't know, modern or just they're losing the identity I guess I would say, culture. So it really reminds me [of] my grandma's house and things that my grandma used to do.
 
 # Works Cited
+
 Bunn, Stephanie. "A 'Making Point of View': Deep Knowledge from Local Practice, with Special Reference to Felt-makers in Kyrgyzstan." Journal of Museum Ethnography, no. 24, 2011, pp. 23–40. JSTOR, www.jstor.org/stable/41710453.
 Bunn, Stephanie. Nomadic Felts. 
 Krebs, Melanie. "Zwischen Handwerktradition und globalem Markt: Kunsthandwerker in Usbekistan und Kirgistan." Berlin, Klaus Schwarz, 2011.
