--- a/_items/2019-10-03-0014.md
+++ b/_items/2019-10-03-0014.md
@@ -14,7 +14,7 @@ shortdesc:
 categories: [  ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
 
 This is a homemade shirt that was made on a First Thursday.  These shirts represent what comes with a First Thursday, Creativity!  [First Thursdays(https://artsandhumanities.indiana.edu/council-programs/first-thursdays/index.html)] are a great way to check out new clubs and events around IU.  These shirts represent what the girls had on their mind and what they wanted to put on the T-shirts.  To learn more about First Thursdays, check them out on their website, as well as looking for flyers around campus.
 
