--- a/_items/2019-10-03-0022.md
+++ b/_items/2019-10-03-0022.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [Keycahin, Fashion, Handmade, Guatemala]
 ---
-## About This Item
+## About This Object
+
 This was an item that comes from a Santa Fe street fair. This item is a Fair Trade item from Guatemala. Fair Trade means that the item was bought for an equally fair price compared to other places in the world. Fair Trade items usually come from developing countries. These items can range from a keychain like this to coffee to clothing.
 
 ## From the Contributor
+
 One of the things that I like about these keychains is that even though they're from Guatemala--that's mostly where they're produced--you can find them just about anywhere, in any city. I've seen them all over the place, and so they're both a reminder of the places that I've been to (which doesn't include Guatemala) but they remind me that there is a larger community of artists and artisans who are sharing their gifts with the world.
