--- a/_items/2019-10-08-0004.md
+++ b/_items/2019-10-08-0004.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [Phone, Personal Item, Internet]
 ---
-## About This Item
+## About This Object
+
 This is an iPhone X. It is a model that came back out a few years ago and has already been surpassed by iPhone 11.
 
 ## From the Contributor
+
 So if I lose my phone, I lose everything I own in one shot, including my house keys which are right there. And then my IU ID, my debit card, my license. You have a lot of faith in this phone. I do have a lot of faith in this phone but it's always with me. Except for that time when it fell in the ocean.
