--- a/_items/2019-10-08-0005.md
+++ b/_items/2019-10-08-0005.md
@@ -14,7 +14,7 @@ categories: [ Nostalgia, Family Ties, Community Culture]
 tags: [ tradition,immigration,blanket,crochet,Mexican American ]
 ---
 
-## About This Item
+## About This Object
 
 #### The Importance of Community:
 
