--- a/_items/2019-10-08-0006.md
+++ b/_items/2019-10-08-0006.md
@@ -14,7 +14,7 @@ categories: [Individual Expression, Family Ties]
 tags: [ coming of age, cultural expression, tattoo, tradition]
 ---
 
-## About This Item
+## About This Object
 
 Islanders typically get tataus or pe’a to show authority, respect, and coming of age. This is in similarity to many tribes in other areas of the world though the designs differ. Traditionally, these are done with ink on a bone and a stick but are transitioning to using needles for health concerns as well as detail ability. Tattoos such as this have been used for centuries to link people to the groups they belong to as well as link them to their ancestors to show respect. They have also been used for intimidation and as a sign of strength. 
 
