--- a/_items/2019-10-09-0002.md
+++ b/_items/2019-10-09-0002.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [Candle, Flame, Blue  ]
 ---
-## About This Item
+## About This Object
+
 This is a blue colored candle.  Looks to be very long in legnth.  Looks similar to a candle that you would put in a center piece.  Was given to the individual when she entered a society in high school.
 
 ## From the Contributor
+
 It was my first time like joining a society that like I put like a lot of time and effort into so being able to like be a part of a group of other people that like share the same passion as me was really something that like has like carried with me as something that like my like passion for like plays and musicals and theatres in general is like a nice little token of that reminder.
