--- a/_items/2019-10-09-0003.md
+++ b/_items/2019-10-09-0003.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
+
 This is the contributor’s first library card that she got when she was just five years old, and now she is a librarian herself! It was also the start of her library card collection, which consists of cards from places she has traveled in Europe. 
 
 ## From the Contributor
+
 <p class=blockquote style=’font-size:115%;’>Now the library is called the Lake Elsinore Public Library which is part of Riverside county public library system and they no longer make these cards anymore so it’s a collector’s edition, very special. I wasn’t really a big reader when I was a kid. And I don’t think I really discovered libraries until I got to college and just valued having the space - especially public libraries. Actually, when I studied abroad in Sweden I started going to the library there because Sweden is very expensive. I ran out of money in like a couple of weeks so I spent a lot of time at the public library because I knew I could go there for free, figured nobody would ask me any questions, and I could just hide out and do my thing there. So that’s when I kinda woke up and went “oh, libraries are a pretty cool thing” and that was the start of sorta set me on the path to becoming a librarian. </p>
