--- a/_items/2019-10-09-0005.md
+++ b/_items/2019-10-09-0005.md
@@ -14,7 +14,7 @@ categories: [ Community Culture, Nostalgia, Individual Expression, Family Ties, 
 tags: [Star Trek, Gorn, Nerdy,  science fiction, Painting, art, Fandom, funny, christmas ]
 ---
 
-## About This Item
+## About This Object
 
 This piece of art was painted to continue a running joke between the Wheeler family about the Gorn in Star Trek. It was created by the contributor's mother and given to him as a present for Christmas. 
 
