--- a/_items/2019-10-09-0006.md
+++ b/_items/2019-10-09-0006.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
+
 This is a Harry Potter-themed tattoo. It is of Hogwarts, and it represents the contributor’s love for the books. They got it in Illinois about two years ago before moving to IU. 
 
 ## From the Contributor
+
 <p class=blockquote style=’font-size:115%;’> Harry Potter was a big part of my childhood, I grew up with it and it's always been my favorite. </p>
