--- a/_items/2019-10-10-0001.md
+++ b/_items/2019-10-10-0001.md
@@ -14,7 +14,7 @@ categories: [ Individual Expression, Nostalgia, Practical]
 tags: [ material culture, athletes in art, clothing, shoes, cleat, Adidas ]
 ---
 
-## About This Item
+## About This Object
 
 These candy-striped Adidas cleats, with their broken-heart, red laces, and gold three-stripe logo are clearly one of a kind. Using clothing to represent culture and experience in athletics has been common for hundreds of years. [When Africa hosted the World Cup for the first time in 2010](http://www.jstor.org/stable/41407127), the passion and culture that the fans showed through their apparel brought the entire nation together. The country was able to be seen and represent themselves on a national stage, and chose to do so through their clothing. Now, years later, athletes all over the country, in almost every sport in the country, are representing their struggles and passions through apparel. 
 
