--- a/_items/2019-10-10-0003.md
+++ b/_items/2019-10-10-0003.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
+
 This is a blue eco-friendly water bottle with an image of a kayak on it. The contributor got this from REI in Indianapolis, and covered it in stickers to add her own personal touch to it. 
 
 ## From the Contributor
+
 <p class=blockquote style=’font-size:115%;’> It’s important to use reusable products because I like the outdoors. [This bottle] kinda just goes along with the low maintenance vibe of being like progressive and caring about the environment. I have a sticker that’s Picture Organic Living. It’s a company in France that makes coats and ski equipment and stuff out of recycled goods. I have like the REI co-op sticker which, honestly, I don’t really know what that means but I’m a member of it. I have a sticker from like Vans cause those are shoes I like to wear so I slap those on there. Then I have another sticker that says ‘a life outdoors is a life well lived’ and that’s also from REI.</p>
