--- a/_items/2019-10-10-0006.md
+++ b/_items/2019-10-10-0006.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
+
 This is a black Coach wallet that the contributor brings with him everywhere he goes and keeps everything in it! 
 
 ## From the Contributor
+
 <p class=blockquote style=’font-size:115%;’> It’s a pretty thick wallet with lots of cards inside and lots of money… well not really that much. It’s a lot of ones. And some receipts - it's pretty thick, people me how I keep it in my pocket. I really have no idea. Inside it’s a bifold with a inside flap for just an ID, or you could even take it out if you wanted to have a smaller wallet for a night out, but I mainly just keep it all together. I carry it on a daily basis, always have to have it. It has anything of pure necessity, from an ID to a couple dollars to your credit card to a Venmo card to a Kroger card. It holds your physical identity in there, too. It has a drivers’ license and operator’s license inside.</p>
