--- a/_items/2019-10-11-0002.md
+++ b/_items/2019-10-11-0002.md
@@ -14,7 +14,7 @@ categories: [ Nostalgia, Practical, Family Ties, ]
 tags: [ sentimentality, kimono, Japan, World War II, Coming of Age Day, Heian Period]
 ---
 
-## About This Item
+## About This Object
 
 Kimonos like these date back historic times in East Asia for both men and women. In the days and years since World War II, especially in more modern times, they have become a symbol of traditional Japaneseness for women. While men’s attire has taken to the Western standard of suits and ties for their "Coming of Age" Day celebrated on the 15th of January each year, women’s attire has stayed traditional in the form or dawning a Kimono for the occasion.
 
