--- a/_items/2019-10-11-0003.md
+++ b/_items/2019-10-11-0003.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [Blanket, Baby, Youth, Unique]
 ---
-## About This Item
+## About This Object
+
 This is a baby blanket that has the word "Baby" stitched in with different colors.  The blanket looks to be of a greyish color and the threading seems to be a little unwound.  This is a blanket that is about 25 years old and has been in the individuals possession for his entire life.
 
 ## From the Contributor
+
 It has never been out of my possession. Between moving about sixteen times, moving three different states and it's always either been on my bed, underneath it in like a storage container, just making sure that it can't get damaged any more than it actually is. It's really the, it's the first thing that I ever really "owned", quote unquote. And it's also just, like I said, it's comforting it's just something that I've always been able to kind of ground myself in and also it's really the only thing from my childhood that goes so far back to a really happy moment or really happy connection that I can make. 
