--- a/_items/2019-10-03-0006.md
+++ b/_items/2019-10-03-0006.md
@@ -14,12 +14,14 @@ shortdesc: A well-loved and -used Kleen Kanteen Thermos that the contributor nev
 categories: [ coffee, ritual, Kleen Kanteen, mountainerring, travel ]
 tags: [ Ritual ]
 ---
-## About This Item
+## About This Object
+
 Reusable waterbottles and thermoses have become a growing trend and means of self expression over the last couple of years, with the ability to customize them via website ordering with designs and initals, to using stickers, which in and of themselves have become a form of expression. Many people today, especially older-teens and young adults, use them to identify with areas, cultures, or other forms of significance to them.[^1]
 
 >*I'm almost never without this object.  It's black. It was once matte black, but it's now very beat up. You can see the silver. It's a silver thermos that was powder-coated or whatever matte black and is now dinged up, scraped up, has a sippy lid on top, has a couple of stickers on it. One sticker's so faded you can't see what it once was, another sticker is not so faded.  It says a fair bit about the places to which, with which I identify.*
 
 ## Customization Culture in the Modern Day
+
 With options like steel, glass, and plastic, reusable waterbottles and thermoses have a seemingly infinite number of ways to be customized to express how one wants to be represented. One of the ways that people choose to show this is customization is by stickers. By phiscally being able to add more to an object, stickers allow one to show places they have been (such as with this thermos), communities they are a part of (such as IU with some schools having stickers), or achievements (such as the "26.2" sticker representing one running a marathon) along with many other things. 
 
 Here at Indiana University, it is near impossible to find someone who does not have a sticker somewhere on their computer, waterbottle, thermos, backapck, etc. Along with stickers, many people also use pins, buttons, cases, the list goes on for ways to express oneself through personal customization of their objects. These artforms provide an inside look into the subcultures and communities that one identitfies with.[^2]
