--- a/_items/2019-10-03-0011.md
+++ b/_items/2019-10-03-0011.md
@@ -14,7 +14,8 @@ shortdesc: A bike helmet that is frequently used in nice weather.
 categories: [ cycling, Bloomington, nature, Little 500, Breaking Away, tradition ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
+
 This Giro bike helmet was given to the contributor from her husband. Even before receiving the helmet, the contributor and their significat other both shared a love for the outdoors and Bloomington's natural beauty. They both fequent the B-Line trail, hiking trails, and the tradition that Indiana University holds every May: The Little 500. 
 
 The Little 500 is a tradition that is held every year at Bill Armstrong Staduim. It is a bike race that consists of riding around the gravel track at the staduim (100 laps for the women's race, 200 for the men's). The race is a fundraiser for scholarships at Indiana University. A very breif video showing the week of Little 500 is shown below:
@@ -25,6 +26,7 @@ Along with the tradition of the Little 500, the contributor also mentions that a
 It only takes a few minutes of walking around the streets of Bloomington, and Indiana University's campus to see how many students, faculty, staff, and residents use bikes as their method of transportation. According to the 2011 US Census, Bloomington, Indiana ranked #2 for the number of residents that either bike or walk to work. [^2]
 
 ## From the Contributor
+
 >*Biking is my first priority [for staying healthy]. And biking in good weather is something I enjoy doing with my husband.
 
 [^1]: Rissel, Chris. “Health Benefits of Cycling.” Cycling Futures, edited by Jennifer Bonham and Marilyn Johnson, University of Adelaide Press, South Australia, 2015, pp. 43–62. JSTOR, www.jstor.org/stable/10.20851/j.ctt1sq5x1g.8. Accessed 22 Feb. 2020.
