--- a/_items/2019-10-03-0020.md
+++ b/_items/2019-10-03-0020.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [Dancing, Samba, Brazil]
 ---
-## About This Item
+## About This Object
+
 These are Golden Samba shoes.  Samba is a dance that originates from Brazil in the late 19th, early 20th Century.  This dance style is one of quick movement and beats. These shoes are very stylish and many of the samba shoes are.  These shoes all mainly also have a huge heel like these shown above.
 
 ## From the Contributor
+
 But, just now, the event I just came from where I used these shoes was, umm, kind of like a promotional thing for the Center of Latin American and Caribbean Studies, and so we did like a samba workshop. And so, little by little I'm finding like ways to... and it's really great to bring the culture here, too, and so like the Brazilians that are here, even though I'm not Brazilian, it's like I can connect to them and they can find a connection to their homeland, too, because someone is dancing, ‘cause they may not know how to, and you know, some of them, they don't know how to dance samba, but they grew up watching it, and for carnival, and stuff like that, and so it brings a connection to them, even, of like their homeland so it's, it's really cool.
