--- a/_items/2019-10-03-0021.md
+++ b/_items/2019-10-03-0021.md
@@ -14,7 +14,7 @@ shortdesc:
 categories: [  ]
 tags: [Music, Creativity, Straight No Chaser]
 ---
-## About This Item
+## About This Object
 
 This Prato plate is something you may look at and think, is this connected to Samba dancing?  Well, this plate ties Samba dancing altogether.  [Samba dancing (https://dance.lovetoknow.com/Samba_Dance_History)] originates from the 19th Century in Brazil, with have its move and music beats coming from African slave dances.  These moves flow and go to the rythym of the music.  This plate has the ethos of what samba brings out in dancers.  This plate resembles the dancing flows and beats that come with samba music.
 
