--- a/_items/2019-10-08-0002.md
+++ b/_items/2019-10-08-0002.md
@@ -14,11 +14,12 @@ categories: [ Nostalgia, Individual Expression]
 tags: [culture, campaign buttons]
 ---
 
-## About This Item
+## About This Object
 
 This pin tells a girls story of how she made a life changing decision and it drasticly altered her experinece she had while she attended Indiana University. 
 
-It tells us how this girl joined a social group ran by an African American girl that was set out to help people specifically afrcian americans figure out who and what they want to do while here on campus at IU.  It talks about how this pin/button changed the way this girl thought of herself, and helped her find herself and create a new experinece for herself within this culture at Indiana University. 
+It tells us how this girl joined a social group ran by an African American girl that was set out to help people specifically afrcian americans figure out who and what they want to do while here on campus at IU.  It talks about how this pin/button changed the way this girl thought of herself, and helped her find herself and create a new experinece for herself within this culture at Indiana University.
+
 ## From the Contributor
 
 This pin plays a major role in the history of that student and her experinece while at Indiana univeristy and specfically her experience within that group and how it really affected her life. 
