--- a/_items/2019-10-10-0004.md
+++ b/_items/2019-10-10-0004.md
@@ -14,8 +14,10 @@ shortdesc:
 categories: [  ]
 tags: [  ]
 ---
-## About This Item
+## About This Object
+
 This is an Adidas hat with an IU Logo on it that the contributor got from the IU bookstore in the Indiana Memorial Union on sale. 
 
 ## From the Contributor
+
 <p class=blockquote style=’font-size:115%;’> Around 15 years ago, I started my career in education in a very small town in India and it started also with B, and so this town, Bloomington, also started B. I kind of relate to it. Over there I studied where I started my education career over there and the name of the school was Del Po Ashad, DPSV, and I’m starting my career here also, so both these places are very significant to me in that way. I’m going to go back to India and have a family business over there so after maybe around 20 years I’ll look at this cap and remember my college life at IU, and that is pretty significant to me. </p>
