swap 'itemdatemade' field for 'itemindianacity' where needed

--- a/_items/2019-10-03-0004.md
+++ b/_items/2019-10-03-0004.md
@@ -8,7 +8,7 @@ itemcontributor: Phillip Snider
 itemcreator: Phillip Snider
 itemsubject: 
 itemdategot: 
-itemdatemade: Vincennes
+itemindianacity: Vincennes
 itemtype: 
 shortdesc: 
 categories: [  ]
