--- a/_items/2019-10-03-0009.md
+++ b/_items/2019-10-03-0009.md
@@ -8,7 +8,7 @@ itemcontributor: Kathy Shaffer
 itemcreator: Kathy Shaffer
 itemsubject: Hand-Made Craft
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: Physical Object
 shortdesc: Once pillow sham repurposed as a purse by the contributor of the object.
 categories: [ handmade, craft, homemade, repurposed material, Domestic Engineers ]
