--- a/_items/2019-10-03-0011.md
+++ b/_items/2019-10-03-0011.md
@@ -8,7 +8,7 @@ itemcontributor: Anonymous Contributor
 itemcreator: Giro
 itemsubject: Bike Helmet
 itemdategot: N/A
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: Physical Object
 shortdesc: A bike helmet that is frequently used in nice weather.
 categories: [ cycling, Bloomington, nature, Little 500, Breaking Away, tradition ]
