--- a/_items/2019-10-03-0013.md
+++ b/_items/2019-10-03-0013.md
@@ -8,7 +8,7 @@ itemcontributor: Jing Jiang
 itemcreator: N/A
 itemsubject: Necklace
 itemdategot: N/A
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: Physical Object
 shortdesc: A silver necklace recieved as a birthday present from her parents in China
 categories: [ family, necklace, jewelry, birthday, tradition ]
