--- a/_items/2019-10-03-0014.md
+++ b/_items/2019-10-03-0014.md
@@ -8,7 +8,7 @@ itemcontributor: Whitney riley
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: 
 shortdesc: 
 categories: [  ]
