--- a/_items/2019-10-03-0020.md
+++ b/_items/2019-10-03-0020.md
@@ -8,7 +8,7 @@ itemcontributor: Liz McHugh
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Chicagoland
+itemindianacity: Chicagoland
 itemtype: 
 shortdesc: 
 categories: [  ]
