--- a/_items/2019-10-08-0004.md
+++ b/_items/2019-10-08-0004.md
@@ -8,7 +8,7 @@ itemcontributor: Anonymous Contributor
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: 
 shortdesc: 
 categories: [  ]
