--- a/_items/2019-10-09-0004.md
+++ b/_items/2019-10-09-0004.md
@@ -8,7 +8,7 @@ itemcontributor: Arianna Buehler
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: 
 shortdesc: 
 categories: [  ]
