--- a/_items/2019-10-10-0006.md
+++ b/_items/2019-10-10-0006.md
@@ -8,7 +8,7 @@ itemcontributor: Paul Centanni
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: St. John
+itemindianacity: St. John
 itemtype: 
 shortdesc: 
 categories: [  ]
