--- a/_items/2019-10-11-0001.md
+++ b/_items/2019-10-11-0001.md
@@ -8,7 +8,7 @@ itemcontributor: Andrea Singer
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington, Indiana
+itemindianacity: Bloomington, Indiana
 itemtype: 
 shortdesc: 
 categories: [  ]
