--- a/_items/2019-10-11-0004.md
+++ b/_items/2019-10-11-0004.md
@@ -8,7 +8,7 @@ itemcontributor: Celine Fernandez
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Fort Wayne 
+itemindianacity: Fort Wayne 
 itemtype: 
 shortdesc: 
 categories: [  ]
