--- a/_items/2019-10-11-0005.md
+++ b/_items/2019-10-11-0005.md
@@ -8,7 +8,7 @@ itemcontributor: Yael Rosenstock
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: 
 shortdesc: 
 categories: 
