--- a/_items/2019-10-03-0006.md
+++ b/_items/2019-10-03-0006.md
@@ -8,7 +8,7 @@ itemcontributor: Anonymous Contributor
 itemcreator: Klean Kanteen
 itemsubject: Reuseable Thermos
 itemdategot: N/A
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: Physical Object
 shortdesc: A well-loved and -used Kleen Kanteen Thermos that the contributor never leaves home without.
 categories: [ coffee, ritual, Kleen Kanteen, mountainerring, travel ]
