--- a/_items/2019-10-03-0008.md
+++ b/_items/2019-10-03-0008.md
@@ -8,7 +8,7 @@ itemcontributor: Nelson R Shaffer
 itemcreator: William R. LeFranu
 itemsubject: Medical Procedures from J.K. Lilly Jr.'s Collection
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: Phyiscal Object
 shortdesc: A rare medical book that contains a collection of other medical books from the Lily Library
 categories: [ science, rare books, collection, donation, Lily Library, Eli Lily ]
