--- a/_items/2019-10-03-0017.md
+++ b/_items/2019-10-03-0017.md
@@ -8,7 +8,7 @@ itemcontributor: Veronica Casillas
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Hammond
+itemindianacity: Hammond
 itemtype: 
 shortdesc: 
 categories: [  ]
