--- a/_items/2019-10-03-0019.md
+++ b/_items/2019-10-03-0019.md
@@ -8,7 +8,7 @@ itemcontributor: Lanya hayes
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Indianapolis,IN
+itemindianacity: Indianapolis,IN
 itemtype: 
 shortdesc: 
 categories: [  ]
