--- a/_items/2019-10-03-0021.md
+++ b/_items/2019-10-03-0021.md
@@ -8,7 +8,7 @@ itemcontributor: Anonymous Contributor
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: 
+itemindianacity: 
 itemtype: 
 shortdesc: 
 categories: [  ]
