--- a/_items/2019-10-03-0022.md
+++ b/_items/2019-10-03-0022.md
@@ -8,7 +8,7 @@ itemcontributor: Anonymous Contributor
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Carmel
+itemindianacity: Carmel
 itemtype: 
 shortdesc: 
 categories: [  ]
