--- a/_items/2019-10-08-0001.md
+++ b/_items/2019-10-08-0001.md
@@ -8,7 +8,7 @@ itemcontributor: Sophia Okotah
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: 
+itemindianacity: 
 itemtype: 
 shortdesc: 
 categories: [  ]
