--- a/_items/2019-10-09-0007.md
+++ b/_items/2019-10-09-0007.md
@@ -8,7 +8,7 @@ itemcontributor: Elizabeth Irvin
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: 
 shortdesc: 
 categories: [  ]
