--- a/_items/2019-10-10-0002.md
+++ b/_items/2019-10-10-0002.md
@@ -8,7 +8,7 @@ itemcontributor: Nilzimar Vieira
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: 
 shortdesc: 
 categories: [  ]
