--- a/_items/2019-10-10-0003.md
+++ b/_items/2019-10-10-0003.md
@@ -8,7 +8,7 @@ itemcontributor: Jack reasner
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Fishers
+itemindianacity: Fishers
 itemtype: 
 shortdesc: 
 categories: [  ]
