--- a/_items/2019-10-11-0003.md
+++ b/_items/2019-10-11-0003.md
@@ -8,7 +8,7 @@ itemcontributor: Matthew Landini
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: 
 shortdesc: 
 categories: [  ]
