--- a/_items/2019-10-11-0006.md
+++ b/_items/2019-10-11-0006.md
@@ -8,7 +8,7 @@ itemcontributor: Jason Michalek
 itemcreator: 
 itemsubject: 
 itemdategot: 
-itemdatemade:
+itemindianacity:
 itemtype: 
 shortdesc: 
 categories: [  ]
