--- a/_items/2019-10-11-0007.md
+++ b/_items/2019-10-11-0007.md
@@ -8,7 +8,7 @@ itemcontributor: Sarah Alexander
 itemcreator: David Orr
 itemsubject: 
 itemdategot: 
-itemdatemade: Bloomington
+itemindianacity: Bloomington
 itemtype: 
 shortdesc: 
 categories: [  ]
